static/main.css
body {
    background: #282828;
    font-family: 'Fira Code', monospace;
    color: #ebdbb2;
}

ul {
    padding: 0;
    background: #282828;
    text-align: center;
    width: 100%;
    border-top: 1px solid #ebdbb2;
}
ul li {
    display: inline-block;
    width: 100%;
    text-align: left;
    padding: 1px 1px;
    margin: 5px 0%;
}

input {
    background-color: #282828;
    color: #ebdbb2;
    border: #ebdbb2 solid 1px;
    margin: 10px;
    padding: 5px;
}

button {
    background-color: #282828;
    color: #ebdbb2;
    border: #ebdbb2 solid 1px;
    margin: 10px;
    padding: 5px;
}

.flex-container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content:center;
}

.block {
    border: #ebdbb2 solid 1px;
    width: 50%;
    margin: 2%;
    padding: 0% 5%;
}

.filename {
    color: #458588;
    display: inline-block;
    width: 90%;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    text-decoration: none;
    word-break:break-all;
}
.filename:hover {
    color: #fff;
    background: #939393;
}

.download-link { color: black; text-align: left;}
.download-link:hover { color: #458588; }
.material-icons { font-size: 24px; }

@media (max-width: 800px){
    .flex-container {
        flex-direction: column;
    }
    .block {
        width: 86%;
    }
}

